feat: add some design pattern examples
Signed-off-by: David Dutra <gdavidben@gmail.com>